# mscript

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  engopts.sh  mscript  mscript.c  mscript.py  mscript.sh  test.m
examples/: read_input.m  test.m  test_error.m
examples/fifo/: call_from_python.py  pipe_via_python.py  readinput.m  readstdin.m  testReadInput.m
extra/mac/: engopts.sh
